--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "chat-app",
+  "name": "occasionly",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^2.2.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.2"
+    "firebase-admin": "^8.6.0",
+    "nodemon": "^1.19.2",
+    "socket.io": "^2.3.0"
   }
 }
